--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,8 @@ numpy
 PyPDF2
 docx2txt
 sentence-transformers
+spacy
+xgboost
+en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1.tar.gz
 
 # Add any other packages your script uses
